--- a/Samples/STL/TestModel.cfg
+++ b/Samples/STL/TestModel.cfg
@@ -9,9 +9,11 @@ MaxZ=3
 [config]
 ToolRadius=1
 TorusRadius=0.25
-Layers=4
-Samples=50
+Layers=1
+Samples=20
 Lines=20
 Cutter=SphericalCutter
 PathGenerator=PushCutter
-PathProcessor=ZigZagCutter
+PathProcessor=ContourCutter
+Direction=xy
+
