renamed the start script again changed the destination directory for doc files
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@257 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,7 +4,9 @@ include COPYING.TXT
 include README.TXT
 include Changelog
 include release_info.txt
-include pycam_start.py
+include pycamGUI
+recursive-include desktop *
+recursive-include man *
 recursive-include pycam *
 recursive-include Samples *
 recursive-include Tests *
