--- a/desktop/pycam.desktop
+++ b/desktop/pycam.desktop
@@ -4,7 +4,7 @@ Encoding=UTF-8
 Name=PyCAM
 GenericName=Toolpath Generator
 Comment=Toolpath Generation for 3-Axis CNC machining
-Exec=pycam_start.py
+Exec=pycamGUI
 Terminal=false
 Type=Application
 Categories=Development;Engineering;Robotics
