--- a/desktop/pycam.desktop
+++ b/desktop/pycam.desktop
@@ -1,10 +1,9 @@
 [Desktop Entry]
 Version=1.0
-Encoding=UTF-8
 Name=PyCAM
 GenericName=Toolpath Generator
 Comment=Toolpath Generation for 3-Axis CNC machining
 Exec=pycamGUI
 Terminal=false
 Type=Application
-Categories=Development;Engineering;Robotics
+Categories=Development;Engineering;Robotics;
