moved the gtk interface files to a separate "share" directory
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@588 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,9 +5,10 @@ include COPYING.TXT
 include README.TXT
 include Changelog
 include release_info.txt
-include pycamGUI
+include pycam
 recursive-include desktop *
 recursive-include man *
 recursive-include src *
+recursive-include share *
 recursive-include Samples *
 recursive-include Tests *
