--- a/desktop/pycam.desktop
+++ b/desktop/pycam.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=PyCAM
 GenericName=Toolpath Generator
 Comment=Toolpath Generation for 3-Axis CNC machining
-Exec=pycamGUI
+Exec=pycam
 Terminal=false
 Type=Application
 Categories=Development;Engineering;Robotics;
