generate the man file directly from the output of "pycam --help" (via "help2man")
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@597 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: python
 Priority: extra
 Maintainer: Sebastian Kuzminsky <seb@highlab.com>
 Build-Depends: python, debhelper (>= 7), cdbs, patchutils
-Build-Depends-Indep: python-support
+Build-Depends-Indep: python-support, help2man
 Standards-Version: 3.8.4
 Homepage: http://sourceforge.net/projects/pycam/
 
