some commandline interface improvements
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@599 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/debian/rules
+++ b/debian/rules
@@ -18,7 +18,15 @@ include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/python-distutils.mk
 include /usr/share/cdbs/1/rules/simple-patchsys.mk
 
+# clean the manpage
+clean:
+	make -C man clean
+
+# build the manpage
+build:
+	make -C man
+
 # install the .desktop file
-install/pycam::
+install:
 	cp -v desktop/pycam.desktop `pwd`/debian/pycam/usr/share/applications/
 
