fixed various small issues
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@605 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,5 +10,5 @@ recursive-include desktop *
 recursive-include man *
 recursive-include src *
 recursive-include share *
-recursive-include Samples *
+recursive-include samples *
 recursive-include Tests *
