--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ packager = Lars Kruse <devel@sumpfralle.de>
 doc_files = Changelog
     README.TXT
     INSTALL.TXT
-    HOWTO.TXT
+    technical_details.txt
     LICENSE.TXT
     COPYING.TXT
     doc/
