some more packaging updates
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@612 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Homepage: http://sourceforge.net/projects/pycam/
 Package: pycam
 Architecture: all
 Depends: python-gtk2, python-opengl (>>3.0.0~b6-3), python-gtkglext1,
- ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}
+ ${misc:Depends}, ${python:Depends}
 Recommends: python-pyode (>>1.2.0-3), python-psyco
 Description: CAM program & library written in Python
  This is a set of Python modules for toolpath generation for 3-Axis
@@ -24,5 +24,5 @@ Description: CAM program & library written in Python
       operations)
     * scale, move, rotate, flip and transform the model
     * interactive 3D model view
-    * non-interactive 'STL to GCode' processing via commandline
+    * non-interactive generation of GCode via commandline
 
