--- a/debian/rules
+++ b/debian/rules
@@ -19,7 +19,7 @@ include /usr/share/cdbs/1/class/python-distutils.mk
 include /usr/share/cdbs/1/rules/simple-patchsys.mk
 
 # clean the manpage
-clean:
+clean::
 	make -C man clean
 
 # build the manpage
