fix XDG standard compliance (missing semicolon)
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1098 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/share/desktop/pycam.desktop
+++ b/share/desktop/pycam.desktop
@@ -7,7 +7,7 @@ Exec=pycam %u
 TryExec=pycam
 Terminal=false
 Type=Application
-Categories=Development;Engineering;Robotics;Education;Science;2DGraphics;VectorGraphics;3DGraphics
-MimeType=application/sla;image/svg+xml;application/postscript;image/vnd.dxf
+Categories=Development;Engineering;Robotics;Education;Science;2DGraphics;VectorGraphics;3DGraphics;
+MimeType=application/sla;image/svg+xml;application/postscript;image/vnd.dxf;
 Icon=pycam
 
