"librecad-data" is an alternative for "qcad-data" (font files)
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1101 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Architecture: all
 Depends: python-gtk2, python-opengl (>>3.0.0~b6-3), python-gtkglext1,
  ${misc:Depends}, ${python:Depends}
 Recommends: python-pyode (>>1.2.0-3), python-psyco, python-setproctitle
-Suggests: inkscape, pstoedit, qcad-data
+Suggests: inkscape, pstoedit, qcad-data | librecad-data
 Description: CAM program & Python library for generating toolpaths
  PyCAM is a toolpath generator for 3 axis machines. The generated
  GCode can be used with EMC2 and other machine controllers.
