added dependency "rsvg" (for svg icons via gdkpixbufloader)
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1229 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Homepage: http://sourceforge.net/projects/pycam/
 
 Package: pycam
 Architecture: all
-Depends: python-gtk2, python-opengl (>>3.0.0~b6-3), python-gtkglext1,
+Depends: python-gtk2, python-opengl (>>3.0.0~b6-3), python-gtkglext1, python-rsvg,
  ${misc:Depends}, ${python:Depends}
 Recommends: python-pyode (>>1.2.0-3), python-psyco, python-setproctitle
 Suggests: inkscape, pstoedit, qcad-data | librecad-data
