--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [bdist_wininst]
-install_script = pycam_win32_postinstall.py
+#install_script = pycam_win32_postinstall.py
 bitmap = share/ui/logo_gui_vertical.bmp
 
 [bdist_msi]
-install_script = pycam_win32_postinstall.py
+#install_script = pycam_win32_postinstall.py
 
 [bdist_rpm]
 packager = Lars Kruse <devel@sumpfralle.de>
