--- a/setup.cfg
+++ b/setup.cfg
@@ -15,3 +15,9 @@ doc_files = Changelog
     doc/
     examples/
 
+[flake8]
+max-line-length = 99
+# flake8 defaults: E121,E123,E126,E226,E24,E704,W503,W504
+# custom additions:
+#   E731: sometimes we like lambda
+ignore = E121,E123,E126,E226,E24,E704,W503,W504,E731
