--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ bitmap = share/ui/logo_gui_vertical.bmp
 [bdist_rpm]
 packager = Lars Kruse <devel@sumpfralle.de>
 doc_files = Changelog
-    README.TXT
+    README.md
     INSTALL.TXT
     LICENSE.TXT
     COPYING.TXT
