d/control: modernize debian packaging
The changes are:

* Switch from cdbs to pure debhelper.

* Switch from quilt to native source format.

* Add build dependencies on unmpy and opengl(!) because the manpage is
  made by help2man, which runs "pycam --help", which imports them.

* "Upstream" source is now at github instead of SourceForge.

* New debian standards version (I don't know how well this package
  adheres to either version...).

--- a/debian/control
+++ b/debian/control
@@ -2,10 +2,9 @@ Source: pycam
 Section: python
 Priority: extra
 Maintainer: Lars Kruse <devel@sumpfralle.de>
-Build-Depends: python, debhelper (>= 7), cdbs, patchutils
-Build-Depends-Indep: python-support, help2man
-Standards-Version: 3.9.2
-Homepage: http://sourceforge.net/projects/pycam/
+Build-Depends: python, debhelper (>= 9), dh-python, help2man, python-opengl, python-numpy
+Standards-Version: 3.9.6
+Homepage: http://github.com/SebKuzminsky/pycam
 
 Package: pycam
 Architecture: all
