--- a/debian/rules
+++ b/debian/rules
@@ -1,40 +1,31 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
+# See debhelper(7) (uncomment to enable)
+# output every command that modifies files on the build system.
+#DH_VERBOSE = 1
 
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
+# see EXAMPLES in dpkg-buildflags(1) and read /usr/share/dpkg/*
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/default.mk
+
+# see FEATURE AREAS in dpkg-buildflags(1)
+#export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+
+# see ENVIRONMENT in dpkg-buildflags(1)
+# package maintainers to append CFLAGS
+#export DEB_CFLAGS_MAINT_APPEND  = -Wall -pedantic
+# package maintainers to append LDFLAGS
+#export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 
 
-export DEB_PYTHON_SYSTEM=pysupport
+# main packaging script based on dh7 syntax
+%:
+	dh $@ --with python2
 
-# Debhelper must be included before python-distutils to use
-# dh_python / dh_pycentral / dh_pysupport
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/python-distutils.mk
+override_dh_auto_build:
+	$(MAKE) -C man
+	python setup.py build
 
-# clean the manpage
-clean::
-	make -C man clean
-
-# build the manpage
-build/pycam::
-	make -C man
-
-# install the .desktop file
-install/pycam::
-	# "desktop" file
-	cp -v share/desktop/pycam.desktop `pwd`/debian/pycam/usr/share/applications/
-	# application logo for the menu entry
-	cp -v share/ui/logo_scalable.svg `pwd`/debian/pycam/usr/share/icons/hicolor/scalable/apps/pycam.svg
-	# remove "doc" directory from /usr/share/pycam/
-	rm -rf `pwd`/debian/pycam/usr/share/pycam/doc
-	# the CXF fonts are distributed by QCAD - use them instead of the embedded ones
-	rm -rf `pwd`/debian/pycam/usr/share/pycam/fonts
-	# the gtkrc file for Windows is useless
-	rm `pwd`/debian/pycam/usr/share/pycam/ui/gtkrc_windows
-
+override_dh_auto_install:
+	python setup.py install --root=$(CURDIR)/debian/pycam --prefix=/usr
+	# remove redundant copy of docs
+	rm -rf $(CURDIR)/debian/pycam/usr/share/pycam/doc
