--- a/debian/control
+++ b/debian/control
@@ -15,7 +15,7 @@ Recommends: python-pyode (>>1.2.0-3), python-psyco, python-setproctitle,
 Suggests: qcad-data | librecad-data
 Description: CAM program & Python library for generating toolpaths
  PyCAM is a toolpath generator for 3 axis machines. The generated
- GCode can be used with EMC2 and other machine controllers.
+ GCode can be used with LinuxCNC and other machine controllers.
  The included Python library can be used independently from the GUI.
  .
  Features:
