--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,7 @@ python:
   - "2.6"
   - "2.7"
 
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y python-gtk2 python-opengl python-gtkglext1
-  - sudo apt-get install -y python-pyode python-setproctitle
-  - sudo apt-get install -y python-rsvg
+before_install: ./scripts/travis-install-build-deps.sh
 
 script:
   - make check-style
