travis: run "pycam --help" as part of the build
This currently fails.  Good thing we have Travis to warn us of this kind
of breakage now :-)

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ before_install: ./scripts/travis-install-build-deps.sh
 script:
   - make check-style || true
   - python setup.py sdist
+  - ./scripts/pycam --help
