enable style checks again

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ python:
 before_install: ./scripts/travis-install-build-deps.sh
 
 script:
-  - make check-style || true
+  - make check-style
   - python setup.py sdist
   - ./scripts/pycam --help
