travis: override "install:" key as requested by travis-ci.org

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ python:
 
 before_install: ./scripts/travis-install-build-deps.sh
 
+install: true
+
 script:
   - make check-style
   - python setup.py sdist
