--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,3 +6,37 @@ repo_url: https://github.com/SebKuzminsky/pycam
 repo_name: GitHub
 
 theme: readthedocs
+
+pages:
+- Home: index.md
+- 3D View: 3d-view.md
+- Articles mentioning PyCAM: articles.md
+- Bounding Box: bounding-box.md
+- Commandline Examples: cli-examples.md
+- Developers Guide: developers-guide.md
+- Engrave Fonts: engrave-fonts.md
+- FAQ: faq.md
+- Features: features.md
+- Getting Started: getting-started.md
+- Hints for 2D modeling with Inkscape SVG: 2d-inkscape-svg.md
+- Hints for 2D modeling with OpenSCAD DXF: 2d-openscad-dxf.md
+- Installation: installation.md
+- Installation MacOS: installation-macos.md
+- Introduction: introduction.md
+- Keyboard Shortcuts: keyboard-shortcuts.md
+- Menu Items: menu-items.md
+- Model Transformations: model-transformations.md
+- OpenGL Troubles: opengl-troubles.md
+- Other Programs: other-programs.md
+- Parallel Processing: parallel-processing.md
+- Process Settings: process-settings.md
+- Requirements: requirements.md
+- Screenshots: screenshots.md
+- Server Mode: server-mode.md
+- Supported Formats: supported-formats.md
+- TODO: todo.md
+- Touch Off: touch-off.md
+- User Manual: user-manual.md
+- Video Translations: video-translations.md
+- Wanted Features: wanted-features.md
+
