--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,31 +9,36 @@ theme: readthedocs
 
 pages:
 - Home: index.md
-- 3D View: 3d-view.md
-- Articles mentioning PyCAM: articles.md
-- Bounding Box: bounding-box.md
-- Command-line Examples: cli-examples.md
-- Developers Guide: developers-guide.md
-- Engrave Fonts: engrave-fonts.md
-- FAQ: faq.md
-- Features: features.md
-- Getting Started: getting-started.md
-- Modeling with Inkscape SVG: modeling-inkscape-svg.md
-- Modeling with OpenSCAD DXF: modeling-openscad-dxf.md
-- Installation: installation.md
-- Installation MacOS: installation-macos.md
-- Introduction: introduction.md
-- Keyboard Shortcuts: keyboard-shortcuts.md
-- Menu Items: menu-items.md
-- Model Transformations: model-transformations.md
-- OpenGL Troubles: opengl-troubles.md
-- Other Programs: other-programs.md
-- Parallel Processing: parallel-processing.md
-- Process Settings: process-settings.md
-- Requirements: requirements.md
-- Screenshots: screenshots.md
-- Server Mode: server-mode.md
-- Supported Formats: supported-formats.md
-- TODO: todo.md
-- Touch Off: touch-off.md
-- Video Translations: video-translations.md
+- Installation:
+  - Installing: installation.md
+  - Requirements: requirements.md
+  - MacOS: installation-macos.md
+- Introduction:
+  - Introduction: introduction.md
+  - Features: features.md
+  - Screenshots: screenshots.md
+  - Supported Formats: supported-formats.md
+  - Getting Started: getting-started.md
+  - Modeling with Inkscape SVG: modeling-inkscape-svg.md
+  - Modeling with OpenSCAD DXF: modeling-openscad-dxf.md
+  - FAQ: faq.md
+- Using the GUI:
+  - Menu Items: menu-items.md
+  - 3D View: 3d-view.md
+  - Model Transformations: model-transformations.md
+  - Engrave Fonts: engrave-fonts.md
+  - Process Settings: process-settings.md
+  - Bounding Box: bounding-box.md
+- Advanced Usage:
+  - Keyboard Shortcuts: keyboard-shortcuts.md
+  - Command-line Examples: cli-examples.md
+  - Server Mode: server-mode.md
+  - Parallel Processing: parallel-processing.md
+  - Touch Off: touch-off.md
+  - OpenGL Troubles: opengl-troubles.md
+- Developers Guide:
+  - Developers Guide: developers-guide.md
+  - Video Translations: video-translations.md
+- External:
+  - Other Programs: other-programs.md
+  - Articles mentioning PyCAM: articles.md
