--- a/debian/rules
+++ b/debian/rules
@@ -22,6 +22,13 @@ include /usr/share/dpkg/default.mk
 %:
 	dh $@ --with python2
 
+# This target updates pycam/Version.py and debian/changelog with current
+# information from git.  It's intended to be run before generating the
+# debian source package.
+prep-source:
+	$(MAKE) pycam/Version.py
+	debian/update-dch-from-git
+
 override_dh_auto_build:
 	$(MAKE) -C man
 	python setup.py build
