d/rules: add a target to update version and changelog
This adds a new target to debian/rules named "prep-source", which updates
pycam/Version.py and debian/changelog with the current version information
and changelog information from git.

It's intended to be run before generating the debian source package.

--- a/debian/rules
+++ b/debian/rules
@@ -22,6 +22,14 @@ include /usr/share/dpkg/default.mk
 %:
 	dh $@ --with python2
 
+# This target updates pycam/Version.py and debian/changelog with current
+# information from git.  It's intended to be run before generating the
+# debian source package.
+prep-source:
+	$(MAKE) update-version
+	$(MAKE) update-deb-changelog
+	rm -f pycam/*.pyc
+
 override_dh_auto_build:
 	$(MAKE) -C man
 	python setup.py build
