remove support for ODE
The ODE library seems to be not actively developed for some years.
This collision detection engine was not the default choice in PyCAM due
to a few collision detection problems. Thus the removal should do no
harm and help remove some cruft code.

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Homepage: http://github.com/SebKuzminsky/pycam
 Package: pycam
 Architecture: all
 Depends: python-gtk2, python-opengl, python-gtkglext1, python-rsvg,
- python-gobject-2, python-numpy, python-pyode, python-setproctitle,
+ python-gobject-2, python-numpy, python-setproctitle,
  inkscape, pstoedit, librecad-data, ${misc:Depends}, ${python:Depends}
 Recommends: python-psyco, python-guppy
 Description: CAM program & Python library for generating toolpaths
