travis: update pycam/Version.py and debian/changelog

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ install: true
 
 script:
   - export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+  - debian/rules prep-source
   - make check-style
   - python setup.py sdist
   - ./scripts/pycam --help
