travis: run the full "make test", instead of just "make check-style"
The "make test" target currently runs the good old "check-style" target
and the new "pytest" target (which runs all the pytest tests).

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ install: true
 
 script:
   - export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-  - make check-style
+  - make test
   - python setup.py sdist
   - ./scripts/pycam --help
