--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Lars Kruse <devel@sumpfralle.de>
 Build-Depends: python, debhelper (>= 9), dh-python, help2man,
  python-opengl, python-numpy, python-setuptools, python-flake8,
- python-pytest
+ python-pytest, python-enum34
 Standards-Version: 3.9.6
 Homepage: http://github.com/SebKuzminsky/pycam
 
