--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ before_install: ./scripts/travis-install-build-deps.sh
 install: true
 
 script:
+  - export BRANCH=$(if [ "${TRAVIS_PULL_REQUEST}" == "false" ]; then echo ${TRAVIS_BRANCH}; else echo ${TRAVIS_PULL_REQUEST_BRANCH}-${TRAVIS_BRANCH}-pull-request; fi)
+  - git branch -D ${BRANCH} || true
+  - git checkout -b ${BRANCH} ${TRAVIS_COMMIT}
   - export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   - debian/rules prep-source
   - make test
