rename 'scripts/pycam' to 'pycam/run_gui.py' and use 'entry_points'
Closes: #90

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,6 @@ script:
   - debian/rules prep-source
   - make test
   - python setup.py sdist
-  - ./scripts/pycam --help
-  - ./scripts/pycam --version
+  - pycam/run_gui.py --help
+  - pycam/run_gui.py --version
   - dpkg-buildpackage -us -uc
