--- a/yaml_flow_example.yml
+++ b/yaml_flow_example.yml
@@ -71,9 +71,10 @@ tools:
                 tool_id: 1
                 diameter: 3
                 feed: 300
-                spindle_enabled: true
-                spindle_speed: 1000
-                spindle_delay: 2
+                spindle:
+                    spin_up_enabled: true
+                    spin_up_delay: 3
+                    speed: 1200
 
 processes:
         process_slicing:
