--- a/debian/control
+++ b/debian/control
@@ -3,15 +3,15 @@ Section: python
 Priority: extra
 Maintainer: Lars Kruse <devel@sumpfralle.de>
 Build-Depends: python, debhelper (>= 9), dh-python, help2man,
- python-opengl, python-numpy, python-setuptools, python-flake8,
- python-pytest, python-enum34
+ python3-opengl, python3-numpy, python3-setuptools, python3-flake8,
+ python3-pytest
 Standards-Version: 3.9.6
 Homepage: http://github.com/SebKuzminsky/pycam
 
 Package: pycam
 Architecture: all
 Depends: python3-gi, python3-opengl, python3-numpy,
- python3-setproctitle, inkscape, pstoedit, librecad-data,
+ python3-setproctitle, python3-yaml, inkscape, pstoedit, librecad-data,
  ${misc:Depends}, ${python3:Depends}
 Description: CAM program & Python library for generating toolpaths
  PyCAM is a toolpath generator for 3 axis machines. The generated
