--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+---
 dist: trusty
 sudo: required
 
@@ -7,16 +8,19 @@ python:
   - "3.5"
 
 git:
-    depth: 10000
+  depth: 10000
 
 before_install: ./scripts/travis-install-build-deps.sh
 
 install: true
 
 script:
-  - export BRANCH=$(if [ "${TRAVIS_PULL_REQUEST}" == "false" ]; then echo ${TRAVIS_BRANCH}; else echo ${TRAVIS_BRANCH}-${TRAVIS_PULL_REQUEST_BRANCH}-pr${TRAVIS_PULL_REQUEST}; fi)
-  - git branch -D ${BRANCH} || true
-  - git checkout -b ${BRANCH} ${TRAVIS_COMMIT}
+  - export BRANCH=$(if [ "${TRAVIS_PULL_REQUEST}" = "false" ];
+    then echo "${TRAVIS_BRANCH}";
+    else printf "%s-%s-pr%d" "$TRAVIS_BRANCH" "$TRAVIS_PULL_REQUEST_BRANCH"
+                "$TRAVIS_PULL_REQUEST"; fi)
+  - git branch -D "${BRANCH}" || true
+  - git checkout -b "${BRANCH}" "${TRAVIS_COMMIT}"
   - export PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   - debian/rules prep-source
   - make test
