--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: python, debhelper (>= 9), dh-python, help2man,
  python-opengl, python-numpy, python-setuptools, python-flake8,
  python-pytest
 Standards-Version: 3.9.6
-Homepage: http://github.com/SebKuzminsky/pycam
+Homepage: https://github.com/SebKuzminsky/pycam
 
 Package: pycam
 Architecture: all
