Implement direct SVG import without external programs
Previously inkscape and pstoedit were chained in order to convert SVG
files to DXF and import the result. This process turned out to be error
prone (besides requiring additional dependencies):
* https://github.com/SebKuzminsky/pycam/issues/118

The new implementation uses svg.path for interpreting basic SVG paths
directly in Python without calling external commands.
For now only a few SVG entities are supported (paths and rectangles).
More entities will probably follow (on demand), like circles and
simple transformations. Full SVG support would be very demanding and is
probably not worth the effort, thus it is not a design goal.
Interested users can always execute the simplication to a path on their
own (e.g. via inkscape).

Closes: #118, #119

(cherry picked from commit f29c90a514828aaeb22d0d8167745fb652b8a591)

--- a/debian/control
+++ b/debian/control
@@ -12,15 +12,14 @@ Build-Depends:
  python-opengl,
  python-pytest,
  python-setuptools,
+ python-svg.path,
 Standards-Version: 3.9.8
 Homepage: https://github.com/SebKuzminsky/pycam
 
 Package: pycam
 Architecture: all
 Depends:
- inkscape,
  librecad-data,
- pstoedit,
  python-enum34,
  python-gobject-2,
  python-gtk2,
