--- a/debian/control
+++ b/debian/control
@@ -2,17 +2,32 @@ Source: pycam
 Section: science
 Priority: optional
 Maintainer: Lars Kruse <devel@sumpfralle.de>
-Build-Depends: python, debhelper (>= 9), dh-python, help2man,
- python3-opengl, python3-numpy, python3-setuptools, python3-flake8,
- python3-pytest
+Build-Depends:
+ debhelper (>= 9),
+ dh-python,
+ help2man,
+ python,
+ python3-flake8,
+ python3-numpy,
+ python3-opengl,
+ python3-pytest,
+ python3-setuptools,
+ python3-svg.path,
 Standards-Version: 3.9.8
 Homepage: https://github.com/SebKuzminsky/pycam
 
 Package: pycam
 Architecture: all
-Depends: python3-gi, python3-opengl, python3-numpy,
- python3-setproctitle, python3-yaml, inkscape, pstoedit, librecad-data,
- ${misc:Depends}, ${python3:Depends}
+Depends:
+ librecad-data,
+ python3-gi,
+ python3-numpy,
+ python3-opengl,
+ python3-setproctitle,
+ python3-svg.path,
+ python3-yaml,
+ ${misc:Depends},
+ ${python3:Depends},
 Description: CAM program & Python library for generating toolpaths
  PyCAM is a toolpath generator for 3 axis machines. The generated
  GCode can be used with LinuxCNC and other machine controllers.
