--- a/yaml_flow_working.yml
+++ b/yaml_flow_working.yml
@@ -136,7 +136,7 @@ toolpaths:
         toolpath1:
                 source:
                         type: task
-                        task: task1
+                        item: task1
                 transformations:
                         - action: clone
                           offset: [20, 0, 0]
@@ -171,7 +171,7 @@ exports:
                         export_settings: tp_settings1
                 source:
                         type: toolpath
-                        toolpaths:
+                        items:
                                 - toolpath1
                 target:
                         type: file
