--- a/debian/control
+++ b/debian/control
@@ -2,17 +2,35 @@ Source: pycam
 Section: science
 Priority: optional
 Maintainer: Lars Kruse <devel@sumpfralle.de>
-Build-Depends: python, debhelper (>= 9), dh-python, help2man,
- python-opengl, python-numpy, python-setuptools, python-flake8,
- python-pytest
+Build-Depends:
+ debhelper (>= 9),
+ dh-python,
+ help2man,
+ python,
+ python-flake8,
+ python-numpy,
+ python-opengl,
+ python-pytest,
+ python-setuptools,
 Standards-Version: 3.9.8
 Homepage: https://github.com/SebKuzminsky/pycam
 
 Package: pycam
 Architecture: all
-Depends: python-gtk2, python-opengl, python-gtkglext1, python-rsvg,
- python-enum34, python-gobject-2, python-numpy, python-setproctitle,
- inkscape, pstoedit, librecad-data, ${misc:Depends}, ${python:Depends}
+Depends:
+ inkscape,
+ librecad-data,
+ pstoedit,
+ python-enum34,
+ python-gobject-2,
+ python-gtk2,
+ python-gtkglext1,
+ python-numpy,
+ python-opengl,
+ python-rsvg,
+ python-setproctitle,
+ ${misc:Depends},
+ ${python:Depends},
 Recommends: python-guppy
 Description: CAM program & Python library for generating toolpaths
  PyCAM is a toolpath generator for 3 axis machines. The generated
