--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Section: science
 Priority: optional
 Maintainer: Lars Kruse <devel@sumpfralle.de>
 Build-Depends:
+ codespell,
  debhelper (>= 9),
  dh-python,
  help2man,
